avancement sur la disposition des images

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -1,6 +1,7 @@
 @font-face {
+    
     font-family: "font1";
-    src: 'impact';
+    src: url('../Assets/fonts/AlexBrush-Regular.ttf');
 }
 
 $font1: "fonte1", sans-serif;
