--- a/src/styles/components/navigation.scss
+++ b/src/styles/components/navigation.scss
@@ -1,9 +1,11 @@
 .navigation{
     ul {
         display: flex;
-        margin: 100px 0px 100px 0px;
-    
-
+        flex-wrap: wrap;
+        justify-content: center;
+        margin: 100px 25px 100px 25px;
+        padding: 0px;
+        
         a{
             text-decoration: none;
             padding: 10px;
@@ -11,15 +13,17 @@
 
         li{
             display: flex;
-
+            font-family: font1;
+            font-size: 35px;
             color: $color3;
+            margin: 0 50px 0 50px;
             cursor:  pointer;
 
             &:hover{
                 color: $color2;
             }
 
-            &:checked{
+            &:visited{
                 color: $color2;
             }
         }
@@ -31,7 +35,7 @@
         &::after{
             content: "";
             height: 4px;
-            width: 0;
+            width: 0px;
             background: $color2;
             position: absolute;
             border-radius: 10px;
@@ -49,9 +53,15 @@
         
             @keyframes anim {
                 to {
-                width: 100%;
+                width: 50%;
                 }
             }
         }
+    }
+
+    img{
+        width: 250px;
+        margin-top: -50px;
+
     }
 }
