--- a/src/styles/components/gallery.scss
+++ b/src/styles/components/gallery.scss
@@ -7,6 +7,12 @@
     border-radius: 20px;
 }
 
+.text{
+    font-size: 35px;
+    font-family: font1;
+    margin-left: 30%;
+}
+
 .gallery{
     display: flex;
     flex-wrap: wrap;
@@ -14,82 +20,78 @@
     align-items: center;
     justify-content: center;
 }
-.gallery-img{
-    background-color: red;
-    box-shadow: 0 0 20px #9e9494;
+
+.image{
+    
     border-radius: 20px;
     display: flex;
     flex-flow: column wrap;
-    margin: 10px;
+    margin: 20px;
     width: 30%;
     line-height: 10%;
     transition: all 0.1s ease;
 }
 
-.image{
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0px;
-}
-
 .image img{
-     width: 100%;
+     width: 96%;
     display: flex;
     flex-wrap: wrap;
-    border-radius: 30px 30px 0 0;
-    height: 115px;
+    border-radius: 30px ;
+    height: 400px;
     object-fit: cover;
     padding: 10px;
 }
 
-// .gallery .image{
-//     transition:all 350ms;
-//     cursor: pointer;
-//     margin-bottom: 12px;
-// }
+.gallery .image{
+    transition:all 350ms;
+    cursor: pointer;
+    margin-bottom: 12px;
+}
 
-// .model{
-//     width: 100%;
-//     height: 100%;
-//     position: fixed;
-//     top: 0;
-//     left: 0;
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//     background-color: black;
-//     transition: opacity .4s ease;
-//     visibility:  .4s ease;
-//     transform:  .5s ease-in-out;
-//     visibility: hidden;
-//     opacity: 0;
-//     transform: scale(0);
-//     overflow: hidden;
-//     z-index: 999;
-// }
-// .model .open{
-//     visibility: visible;
-//     opacity: 1;
-//     transform: scale(1);
+.model{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    transition: opacity .4s ease, visibility .4s ease, transform .5s ease-in-out;
+    visibility: hidden;
+    opacity: 0;
+    transform: scale(0);
+    overflow: hidden;
+    z-index: 999;
+}
 
-// }
+.model.open{
+    visibility: visible;
+    opacity: 1;
+    transform: scale(1);
 
-// .model img{
-//     width: auto;
-//     max-width: 100%;
-//     height: auto;
-//     max-height: 100%;
-//     display: block;
-//     line-height: 0;
-//     box-sizing: border-box;
-//     padding: 20px 0 20px;
-//     margin: 0 auto;
-// }
+}
 
-// .FaWindowClose{
-//     position: fixed;
-//     top: 10px;
-//     right: 10px;
-//     cursor: pointer;
-// }
+.model img{
+    width: auto;
+    max-width: 100%;
+    height: auto;
+    max-height: 100%;
+    display: block;
+    line-height: 0;
+    box-sizing: border-box;
+    padding: 20px 0 20px;
+    margin: 0 auto;
+}
+
+.model.open svg{
+    position: fixed;
+    color: white;
+    top: 10px;
+    right: 10px;
+    width: 50px;
+    height: 2rem;
+    padding: 5px;
+    cursor: pointer;
+}
