--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,6 @@
 @import "./settings";
+@import './components/home.scss';
 @import "./components/navigation";
-@import './components/gallery'
+@import './components/gallery';
+@import './components/presentation';
+@import './components/contact';
