--- a/src/styles/components/contact.scss
+++ b/src/styles/components/contact.scss
@@ -2,8 +2,9 @@
     display: flex;
     flex-direction: column;
     width: 50%;
-    margin-left: 25%;
+    margin-left: 22%;
     align-items: center;
+    padding: 100px 0 60px 0;
 }
 
 .description{
@@ -11,12 +12,15 @@
     display: flex;
     text-align: center;
     margin-bottom: 50px;
+    text-align: justify;
+    
 }
 
 .contact{
     font-size: 20px;
     display: flex;
     text-align: center;
+
     
 }
 
@@ -27,3 +31,16 @@
 .contact li p{
     font-weight: bold;
 }
+
+@media screen and (max-width: 820px) {
+    .all-blocks{
+        width: 60%;
+        margin-left: 22%;
+    }
+
+    .contact{
+        margin-left: -50px;
+    }
+   
+}
+
