--- a/src/styles/components/navigation.scss
+++ b/src/styles/components/navigation.scss
@@ -1,17 +1,18 @@
 .navigation{
+
+    display: flex;
+    justify-content: center;
+
     ul {
-        
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        margin: 48px 25px 30px 25px;
+        margin: 50px 10px 35px 10px;
         padding: 0px;
-        
-        
         
         a{
             text-decoration: none;
-            padding: 10px;
+            padding: 0px;
         }
 
         li{
@@ -19,9 +20,93 @@
             font-family: font1;
             font-size: 35px;
             color: $color1;
-            margin: 0 50px 0 50px;
+            margin: 0 20px 0 20px;
             cursor:  pointer;
-            width: 110px;
+            width: 220px;
+            
+            &:hover{
+                color: $color2;
+            }
+
+            &:visited{
+                color: $color2;
+            }
+        }
+    }
+
+    .left-nav{
+        display: flex;
+        margin-right: 35px;
+        margin-left: 20px;
+       
+    }
+    .right-nav{
+        display: flex;
+        margin-right: -40px;
+        margin-left: 40px;
+    }
+
+    .nav-active{
+        position: relative;
+
+        &::after{
+            content: "";
+            height: 4px;
+            width: 0px;
+            background: $color2;
+            position: absolute;
+            border-radius: 10px;
+            bottom: 0px;
+            left: 32%;
+            transform: translate(-50%);
+            -webkit-animation: anim 0.3s ease forwards;
+            animation: anim 0.6s ease forwards;
+
+             @-webkit-keyframes anim {
+                to {
+                width: 100%;
+                }
+            }
+        
+            @keyframes anim {
+                to {
+                width: 50%;
+                }
+            }
+        }
+    }
+
+    img{
+        width: 350px;
+        margin: -85px 0px 0px -110px;
+
+    }
+
+}
+.navigation2{
+    
+      ul {
+        
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin: 50px 10px 35px 25px;
+        padding: 0px;
+        
+
+        a{
+            text-decoration: none;
+            padding: 0px;
+        }
+
+        li{
+            display: flex;
+            font-family: font1;
+            font-size: 35px;
+            color: $color1;
+            margin: 0 20px 0 20px;
+            cursor:  pointer;
+            width: 220px;
             
 
             &:hover{
@@ -45,7 +130,7 @@
             position: absolute;
             border-radius: 10px;
             bottom: 0px;
-            left: 50%;
+            left: 32%;
             transform: translate(-50%);
             -webkit-animation: anim 0.3s ease forwards;
             animation: anim 0.6s ease forwards;
@@ -64,17 +149,147 @@
         }
     }
 
-    img{
-        width: 250px;
-        margin: -50px 0px 0px -60px;
-
-    }
-
     .icons{
         
-        margin: -45px 0 0 35px;
+        margin: -35px 0 0 35px;
         width: 50px;
+        
     }
 }
 
+@media screen and (max-width: 1080px) {
+    .navigation {
+        
 
+        .left-nav{
+            flex-direction: column;
+            align-content: flex-start;
+            
+        }
+
+        .right-nav{
+            flex-direction: column;
+            align-content: flex-end;
+        }
+
+        img{
+            padding: 10px 0 10px 0;
+            width: 300px;
+            margin: -32px 0px 0px -68px;
+        }
+
+    }
+
+    .navigation2{
+
+        ul{
+
+            margin: 50px 0px 35px 130px;
+            flex-wrap: initial;
+        }
+    }
+}
+
+@media screen and (max-width: 820px) {
+    .navigation{
+        
+
+        ul{
+         background-color: #ffffff99;
+         margin: 35px 0px 35px 40px;
+         flex-wrap: nowrap;
+         align-items: center;
+        }
+
+        li{
+            padding: 10px;
+        }
+
+        .left-nav{
+            flex-direction: column;
+            align-content: flex-start;
+        }
+
+        .right-nav{
+            flex-direction: column;
+            align-content: flex-end;
+        }
+        
+        img{
+            padding: 10px 0 10px 0;
+            width: 300px;
+            margin: -52px 0px 0px -75px;
+        }
+       
+    
+    }
+    .navigation2{
+        margin-left: 80px;
+    }
+
+}
+
+@media screen and (max-width: 430px) {
+
+    .navigation{
+        
+        ul{
+            flex-direction: column;
+            margin: 0;
+            width: 100%;
+        }
+
+      
+        
+
+        .left-nav{
+            
+            margin-left: 150px;   
+        }
+
+        .right-nav{
+            margin-left: 80px;
+        }
+
+       
+        
+        img{
+            padding: 10px 0 10px 0;
+            width: 100%;
+            margin: -30px 0px 0px 0px;
+        }
+       
+    
+    }
+
+    .navigation2{
+        margin-right: 0;
+        ul{
+
+            margin: 50px 0px 35px 0px;
+            flex-wrap: initial;
+        
+
+        li{
+            width: 40%;
+            justify-content: center;
+            margin: 0 20px 0 0 ;
+   
+        }
+    }
+        .icons{
+            display: flex;
+            flex-direction: row;
+            
+            margin: 0 40px 0 0;
+        }
+
+        .nav-active{
+        
+
+        &::after{
+            left: 25%;
+        }
+        }
+    }
+}
