--- a/src/styles/components/presentation.scss
+++ b/src/styles/components/presentation.scss
@@ -4,6 +4,7 @@
     align-items: center;
     width: 70%;
     margin-left: 15%;
+    text-align: justify;
 
 
 }
@@ -13,10 +14,37 @@
     width: 100%;
     margin: 45px;
 }
+
 .picture img{
     display: flex;
     flex-wrap: wrap;
     border-radius: 30px ;
     height: 400px;
     object-fit: cover;
+}
+
+@media screen and (max-width: 820px) {
+
+    .all-composants{
+        width: 95%;
+        margin-left: 0%;
+    }
+}
+
+@media screen and (max-width: 430px) {
+
+    .all-composants{
+        flex-direction: column;
+        width: 100%;
+                
+    }
+
+    .picture{
+        margin: 40px 0 30px 150px;
+    }
+
+    .about{
+        margin: 0 10px 0 10px;
+    }
+
 }
