--- a/src/styles/components/home.scss
+++ b/src/styles/components/home.scss
@@ -12,32 +12,75 @@
 .navigation-home{
     position: absolute;
     z-index: 100;
-    background-color: #ffffff99;
     width: 100%;
     text-align: center;
+    
+    .navigation{
+
+         ul li{
+        color: white;
+    }
+    }
 }
 
 .navigation2-home{
     position: absolute;
     top: 1087px;
-    background-color: #ffffff99;
     width: 100%;
     text-align: center;
+
+     .navigation2{
+        
+         ul li{
+        color: white;
+    }
+    }
 }
 
+
+@media screen and (max-width: 1180px) {
+
+.navigation2-home{
+        top: 585px;
+
+        
+    }
+
+}
 @media screen and (max-width: 820px) {
     .navigation-home{
-    top:0px
+    top:0px;
+    
+    .navigation{
+        
+         ul li{
+        color: black;
+    }
+    }
+    }
+
+    .navigation2-home{
+        top: 850px;
+        .navigation2{
+        
+         ul li{
+        color: black;
+    }
+    }
     }
 
     .carousel{
-        top:265px;
+        top:280px;
     }
 }
 
 @media screen and (max-width: 430px) {
     .carousel{
-        top:550px;
+        top: 555px;
+    }
+
+    .navigation2-home{
+        top: 850px;
     }
 }
 
