--- a/src/styles/components/navigation.scss
+++ b/src/styles/components/navigation.scss
@@ -1,5 +1,5 @@
 .navigation{
-
+    background-color: #ffffff99;
     display: flex;
     justify-content: center;
 
@@ -23,6 +23,7 @@
             margin: 0 20px 0 20px;
             cursor:  pointer;
             width: 220px;
+            color: black;
             
             &:hover{
                 color: $color2;
@@ -84,6 +85,8 @@
 
 }
 .navigation2{
+    padding: 0 0 1px 0;
+    background-color: #ffffff99;
     
       ul {
         
@@ -104,9 +107,10 @@
             font-family: font1;
             font-size: 35px;
             color: $color1;
-            margin: 0 20px 0 20px;
+            margin: 10px 20px 0 20px;
             cursor:  pointer;
             width: 220px;
+            color:black;
             
 
             &:hover{
@@ -159,7 +163,7 @@
 
 @media screen and (max-width: 1180px) {
     .navigation {
-        
+        background-color: none;
 
         .left-nav{
             flex-direction: column;
@@ -172,6 +176,8 @@
             align-content: flex-end;
         }
 
+      
+
         img{
             padding: 10px 0 10px 0;
             width: 300px;
@@ -183,9 +189,10 @@
     .navigation2{
 
         ul{
-
+            
             margin: 50px 0px 35px 130px;
             flex-wrap: initial;
+           
         }
     }
 }
@@ -195,7 +202,7 @@
         
 
         ul{
-         background-color: #ffffff99;
+         
          margin: 35px -86px 35px -85px;
          flex-wrap: nowrap;
          align-items: center;
@@ -251,6 +258,10 @@
             }
         .left-nav{
             margin-left: 171px;
+        }
+
+        .right-nav{
+            margin-left: 145px;
         }
 
 
