--- a/src/styles/components/contact.scss
+++ b/src/styles/components/contact.scss
@@ -1,8 +1,7 @@
 .all-blocks{
     display: flex;
     flex-direction: column;
-    width: 50%;
-    margin-left: 22%;
+    width: 100%;
     align-items: center;
     padding: 100px 0 60px 0;
 }
@@ -30,6 +29,12 @@
 }
 .contact li p{
     font-weight: bold;
+}
+
+@media screen and (max-width: 1180px) {
+    .description{
+        text-align: center;
+    }
 }
 
 @media screen and (max-width: 820px) {
