--- a/src/styles/components/presentation.scss
+++ b/src/styles/components/presentation.scss
@@ -1,33 +1,48 @@
 .all-composants{
     display: flex;
     flex-direction: row;
-    align-items: center;
-    width: 70%;
-    margin-left: 15%;
+    width: 90%;
+    margin-top: 50px;
     text-align: justify;
 
 
 }
 
+.about{
+    display: flex;
+    justify-content: flex-end;
+    font-size: 30px;
+    width: 70%;
+    margin: 0 0 0 20px;
+    font-family: font1;
+}
+
+
 .picture {
-    
-    width: 100%;
-    margin: 45px;
+    display: flex;
+    justify-content: flex-start;
+    margin: 20px 50px 0 50px;
 }
 
 .picture img{
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     border-radius: 30px ;
-    height: 400px;
+    height: 700px;
     object-fit: cover;
+}
+
+@media screen and (max-width: 1180px) {
+    .picture{
+        margin-top: 160px;
+    }
 }
 
 @media screen and (max-width: 820px) {
 
-    .all-composants{
-        width: 95%;
-        margin-left: 0%;
+    .picture{
+        margin-top: 90px;
     }
 }
 
@@ -35,16 +50,16 @@
 
     .all-composants{
         flex-direction: column;
-        width: 100%;
+             
                 
     }
 
     .picture{
-        margin: 40px 0 30px 150px;
+        margin: 0 10px 30px 10px;
     }
 
     .about{
-        margin: 0 10px 0 10px;
+        width: 90%;
     }
 
 }
