--- a/src/styles/components/gallery.scss
+++ b/src/styles/components/gallery.scss
@@ -115,10 +115,11 @@
 
 }
 
-@media screen and (max-width: 430px) {
+@media screen and (max-width: 730px) {
 
     .allGalery{
         margin-top: 30px;
+        width: 100%;
     }
     .image{
         width: 90%;
