--- a/src/styles/components/navigation.scss
+++ b/src/styles/components/navigation.scss
@@ -160,6 +160,24 @@
     }
 }
 
+@media screen and (max-width: 1823px) {
+    .navigation{
+    .left-nav{
+        display:inline;
+    }
+    .right-nav{
+        display:inline;
+    }
+
+    img{
+        margin-top: -31px;
+    }
+    
+    
+}
+
+}
+
 @media screen and (max-width: 1180px) {
     .navigation {
         background-color: none;
@@ -179,8 +197,8 @@
 
         img{
             padding: 10px 0 10px 0;
-            width: 300px;
-            margin: -32px 0px 0px -68px;
+            width: 350px;
+            margin: -39px 0px 0px -108px;
         }
 
     }
@@ -242,7 +260,7 @@
 
 }
 
-@media screen and (max-width: 430px) {
+@media screen and (max-width: 730px) {
 
     .navigation{
         
