--- a/src/styles/components/navigation.scss
+++ b/src/styles/components/navigation.scss
@@ -264,6 +264,7 @@
 
     .navigation{
         
+        background-color: none;
             ul{
                 flex-direction: column;
                 
