--- a/src/styles/components/contact.scss
+++ b/src/styles/components/contact.scss
@@ -19,8 +19,11 @@
     font-size: 20px;
     display: flex;
     text-align: center;
+}
 
-    
+.underline{
+    text-decoration: underline;
+    color: $color2;
 }
 
 .contact li{
