--- a/src/styles/components/gallery.scss
+++ b/src/styles/components/gallery.scss
@@ -26,14 +26,14 @@
     
     display: flex;
     margin: 20px;
-    width: 30%;
+    // width: 30%;
     line-height: 10%;
     transition: all 0.1s ease;
     
 }
 
 .image img{
-     width: 96%;
+    width: 100%;
     display: flex;
     border-radius: 30px ;
     height: 400px;
